[package]
name = "netscan-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["yabowarcherio <yabowarcher8590@gmail.com>"]
description = "Async TCP connect scanner that ties oui-lookup, cidr-utils, portspec, and wol-rs together — the NetScan engine."
documentation = "https://docs.rs/netscan-core"
repository = "https://github.com/yabowarcherio/netscan-core"
homepage = "https://github.com/yabowarcherio/netscan-core"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["network", "scanner", "port-scan", "tcp", "async"]
categories = ["network-programming", "command-line-utilities"]
exclude = [".github/", "deny.toml"]

[lib]
name = "netscan_core"
path = "src/lib.rs"

[[bin]]
name = "netscan"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde", "dep:serde_json"]

[dependencies]
# Sibling stepping-stone crates. Pinned to git tags so netscan-core stands
# alone (no sibling checkouts required) and each version bump is deliberate.
cidr-utils = { git = "https://github.com/yabowarcherio/cidr-utils", tag = "v0.3.0", default-features = false }
portspec = { git = "https://github.com/yabowarcherio/portspec", tag = "v0.3.0", default-features = false }
oui-lookup = { git = "https://github.com/yabowarcherio/oui-lookup", tag = "v0.8.0", default-features = false }
wol-rs = { git = "https://github.com/yabowarcherio/wol-rs", tag = "v0.2.0", default-features = false }

tokio = { version = "1", features = [
    "net",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }

clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt", "macros", "time", "test-util"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
